# dashboard_fastapi

./: app.py  pyproject.toml  requirements.txt
static/: output.css
templates/: bad_actors.html  base.html  dashboard_main.html  dir_size.html  list_dirs.html  pie_chart.html
